--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,8 @@
 		<title>Contact 📝</title>
 		<link rel="stylesheet" href="CSS/style.css">
 		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	</head>
 
 <body class="light-theme">
@@ -32,7 +34,7 @@
 			<li class="nav-item">
 				<a class="nav-link" href="Contact.html">Contact</a>
 			</li> 
-			<div class="theme-switch-wrapper">
+			<div class="theme-switch-wrapper"> 			<!--- thema switcher   . -->	
 				<label class="theme-switch" for="checkbox">
 					<input type="checkbox" id="checkbox" />
 					<div class="slider">
@@ -74,7 +76,7 @@
 					</svg>
 					</div>
 				</label>
-				</div>
+				</div>	
 		</ul>
 
 </div>
@@ -143,7 +145,8 @@
 		</div>
 	</div>
 </div>
-		
+
+
 <div class="draggable"  >   						<!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
