--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="CSS/style.css">
 		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
 		<link rel="stylesheet" href="CSS/owl.carousel.min.css">
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	</head>
 	
 <body class="light-theme">
@@ -437,10 +438,10 @@
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
 		<div class="social-icons">
-			<a href="https://github.com/bkhaie" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-			<a href="https://twitter.com/Badrkhaie" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-			<a href="https://www.linkedin.com/in/badr-khaie-2b805267/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
-			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
+			<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
+			<a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
+			<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
+			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
 </footer> 											<!--footer end --------------->
