--- a/Contact.html
+++ b/Contact.html
@@ -171,7 +171,7 @@
 </div>
 
 
-<div class="contact-container"> 						<!--about-me-text-->
+<div class="contact-container"> 						<!--Contact-->
 	<form>
 		<h3 class="contact">Contact</h3>	
 		<div class="form-group">
