--- a/Contact.html
+++ b/Contact.html
@@ -175,19 +175,19 @@
 	<form>
 		<h3 class="contact">Contact</h3>	
 		<div class="form-group">
-			<input type="text" class="form-control" placeholder="Your Name"  required >
+			<input type="text" class="form-control" placeholder="Naam"  required >
 		</div>
 
 		<div class="form-group">
-			<input type="email" class="form-control" placeholder="Your Email" required>
+			<input type="text" class="form-control" placeholder="Email" required>
 		</div>
 
 		<div class="form-group">
-			<input type="text" class="form-control" placeholder="Your Subject">
+			<input type="text" class="form-control" placeholder="Onderwerp">
 		</div>
 
 		<div class="form-group">
-			<textarea class="form-control" rows="7" placeholder="Message" required></textarea>
+			<textarea class="form-control" rows="7" placeholder="Bericht" required></textarea>
 		</div>
 
 		<button type="submit" class="btn btn-primary contact-btn">SEND</button>
