--- a/Projecten.html
+++ b/Projecten.html
@@ -32,7 +32,7 @@
 					<a class="nav-link" href="Projecten.html">Projecten</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="Contact.html">Contact</a>
+					<a class="nav-link" href="Contact.php">Contact</a>
 				</li> 
 				<div class="theme-switch-wrapper">
 					<label class="theme-switch" for="checkbox">
