--- a/index.html
+++ b/index.html
@@ -212,6 +212,14 @@
 		<a href="Contact.html" class="btn btn-dark" role="button" aria-pressed="true">Contact</a>
 </div>
 
+<div class="section">									<!--Contacteer mij!-->
+	<div class="top-border left"></div>
+	<div class="top-border right"></div>
+	<h1>CONTACT US</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	  <a href="#">CONTACT US</a>
+  </div>
+
 </main>
 
 <footer class="footer"> 							<!--footer--------------->
