--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
 		<a href="Contact.html" class="btn btn-dark" role="button" aria-pressed="true">Contact</a>
 </div>
 
-<div class="section">									<!--Contacteer mij!-->
+<div class="contactsection">									<!--Contacteer mij!-->
 	<div class="top-border left"></div>
 	<div class="top-border right"></div>
-	<h1>CONTACT US</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	<h1>CONTACT ME</h1>
+	<p>Contacteer mij via de contactpagina! s.v.p houd in de gaten dat de website onder constructie is.</p>
 	  <a href="#">CONTACT US</a>
   </div>
 
