--- a/index.html
+++ b/index.html
@@ -196,8 +196,11 @@
 		<li>"Who dares wins" </li>
 		<li>"No pain no gain"</li>
 			<br>
-		<li>Sport 🏋🏻 </li>
+		<li>Work💼</li>
+		<li>Sport 	  🏋🏻 </li>
+		<li>Investing 📈</li>
 		<li>Games 🎮</li>
+		
 	</ul>
 </div>
 </div>
@@ -209,15 +212,14 @@
 		<p>Als MBO student bij de Roc Mondriaan ben ik bereid om door te groeien van Software Developer (MBO) Naar Cybersecurity (HBO) <br>
            <i> "Who dares wins 🏆"</i> </p>
 		<p>Wil je meer over mij weten? <br> Neem contact op!</p>
-		<a href="Contact.html" class="btn btn-dark" role="button" aria-pressed="true">Contact</a>
 </div>
 
 <div class="contactsection">									<!--Contacteer mij!-->
 	<div class="top-border left"></div>
 	<div class="top-border right"></div>
-	<h1>CONTACT ME</h1>
-	<p>Contacteer mij via de contactpagina! s.v.p houd in de gaten dat de website onder constructie is.</p>
-	  <a href="#">CONTACT US</a>
+	<h1>CONTACT</h1>
+	<p>Contacteer mij via de contactpagina! <br> s.v.p houd in de gaten dat de website onder constructie is.</p>
+	  <a href="Contact.php">CONTACTEER MIJ</a>
   </div>
 
 </main>
