--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	<div class="top-border right"></div>
 	<h1>CONTACT</h1>
 	<p>Contacteer mij via de contactpagina! <br> s.v.p houd in de gaten dat de website onder constructie is.</p>
-	  <a href="Contact.php">CONTACTEER MIJ</a>
+	  <a href="Contact.php">BERICHT STUREN</a>
   </div>
 
 </main>
