--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -33,7 +33,7 @@
 				<a class="nav-link" href="Projecten.html">Projecten</a>
 			</li>
 			<li class="nav-item">		<!--- Contact	-->
-				<a class="nav-link" href="Contact.html">Contact</a>
+				<a class="nav-link" href="Contact.php">Contact</a>
 			</li> 
 			<div class="theme-switch-wrapper">	<!--- Thema switcher button	-->
 				<label class="theme-switch" for="checkbox">
