--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
 	<p>Contacteer mij via de contactpagina! <br> s.v.p houd in de gaten dat de website onder constructie is.</p>
 	  <a href="Contact.php">BERICHT STUREN</a>
   </div>
-
+  <canvas class="rainbow-pixel-canvas"></canvas>
+  <p>Drag to draw. Double tap to clear.</p>
 </main>
 
 <footer class="footer"> 							<!--footer--------------->
@@ -233,7 +234,7 @@
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
 </footer> 											<!--footer end --------------->
-
+<script src="JS/draw.js"></script>	
 <script src="JS/expando.js"></script>				<!--Widget + Rekenmachine+ BTE------->
 <script src="JS/dark.js"></script>					<!--Thema Switcher ----->
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
