--- a/Projecten.html
+++ b/Projecten.html
@@ -172,7 +172,7 @@
 <div class="row">		
 	<div class="col-md-4">		<!--- Portfolio  -->
 		<div class="content">
-			<a href="badrkit.nl" target="_blank" rel="noopener noreferrer">
+			<a href="https://www.badrkit.nl" target="_blank" rel="noopener noreferrer">
 			<div class="content-overlay"></div>
 			<img class="content-image"  src="Pictures/Portfolio.png" >
 			<div class="content-details">
