--- a/Projecten.html
+++ b/Projecten.html
@@ -183,7 +183,7 @@
 	</div>
 	<div class="col-md-4">		<!--- kaartspel  -->
 		<div class="content">
-			<a  id="rekenmachine" onclick="kaartspel()"  target="_blank" rel="noopener noreferrer">
+			<a  id="kaartspel" onclick="kaartspel()"  target="_blank" rel="noopener noreferrer">
 			<div class="content-overlay"></div>
 			<img class="content-image"  src="Pictures/Hogerlager.png" >
 			<div class="content-details">
